--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ds2d (javascript version)",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
   "repository": {
     "type": "git",
@@ -17,14 +17,16 @@
   },
   "homepage": "https://github.com/jusopi/ds2d-js",
   "dependencies": {
-    "browserify": "^11.2.0",
+    "ash.coffee": "^0.1.1",
     "coffeeify": "^1.1.0",
     "createjs-collection": "^0.8.2-1",
     "gulp": "^3.9.0"
   },
   "devDependencies": {
+    "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-connect": "^2.2.0",
+    "gulp-util": "^3.0.6",
+    "webpack": "^1.12.2"
   }
 }
